# PCD-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: canny.cpp  client  client.c  client1.cpp  client2.py  clienta  clienta.cpp  contur.c  contur.cpp  procesareImagine.c  rotate.c  rotate.cpp  server  server.c  server.cpp
